// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedList Horizontal rendering With empty data matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitBoxPack": "center",
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "center",
      "backgroundColor": "rgba(239,239,244,1.00)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "center",
      "msFlexNegative": 1,
      "msFlexPack": "center",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-76zvg2"
    dir="auto"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Feed is empty.
  </div>
</div>
`;

exports[`FeedList Horizontal rendering With feed data matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "backgroundColor": "rgba(0,0,0,0.70)",
      "bottom": "0px",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "768px",
      "left": "0px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "20px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "20px",
      "position": "fixed",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    onResponderGrant={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminationRequest={[Function]}
    onScroll={[Function]}
    onScrollShouldSetResponder={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitOverflowScrolling": "touch",
        "WebkitScrollSnapType": "x mandatory",
        "WebkitTransform": "translateZ(0px)",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msScrollSnapType": "x mandatory",
        "overflowX": "auto",
        "overflowY": "hidden",
        "scrollSnapType": "x mandatory",
        "transform": "translateZ(0px)",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxDirection": "normal",
          "WebkitBoxFlex": 1,
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexBasis": "0%",
          "WebkitFlexDirection": "row",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "maxWidth": "100vw",
          "msFlexDirection": "row",
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
          "width": "100%",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "scrollSnapAlign": "start",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "flexDirection": "row",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignSelf": "flex-start",
                "WebkitBoxFlex": 1,
                "WebkitFlexBasis": "0%",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignSelf": "flex-start",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "height": "90vh",
                "marginRight": "10px",
                "msFlexItemAlign": "start",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
                "width": "95vw",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": "100%",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "backgroundColor": "rgba(255,255,255,1.00)",
                    "borderBottomColor": "rgba(201,200,201,1.00)",
                    "borderBottomLeftRadius": "4px",
                    "borderBottomRightRadius": "4px",
                    "borderBottomWidth": "2px",
                    "borderLeftColor": "rgba(201,200,201,1.00)",
                    "borderLeftWidth": "10px",
                    "borderRightColor": "rgba(201,200,201,1.00)",
                    "borderRightWidth": "2px",
                    "borderTopColor": "rgba(201,200,201,1.00)",
                    "borderTopLeftRadius": "4px",
                    "borderTopRightRadius": "4px",
                    "borderTopWidth": "2px",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                    "paddingBottom": "30px",
                    "paddingLeft": "30px",
                    "paddingRight": "30px",
                    "paddingTop": "30px",
                  }
                }
              >
                <div
                  className="css-text-76zvg2"
                  dir="auto"
                >
                  4/1/2019
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "end",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "flex-end",
                      "alignItems": "center",
                      "backgroundColor": "rgba(255,255,255,1.00)",
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexPack": "end",
                      "paddingBottom": "0px",
                      "paddingLeft": "0px",
                      "paddingRight": "0px",
                      "paddingTop": "0px",
                    }
                  }
                >
                  <div
                    className="css-text-76zvg2"
                    dir="auto"
                    style={
                      Object {
                        "WebkitBoxFlex": 1,
                        "WebkitFlexBasis": "0%",
                        "WebkitFlexGrow": 1,
                        "WebkitFlexShrink": 1,
                        "color": "rgba(0,0,0,1.00)",
                        "flexBasis": "0%",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "fontFamily": "Helvetica, \\"sans-serif\\"",
                        "fontSize": "16px",
                        "fontWeight": "bold",
                        "msFlexNegative": 1,
                        "msFlexPositive": 1,
                        "msFlexPreferredSize": "0%",
                      }
                    }
                  >
                    Withdrawn GD
                  </div>
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "16px",
                          "fontWeight": "bold",
                          "textAlign": "right",
                        }
                      }
                    >
                      0.04
                    </div>
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "16px",
                          "fontWeight": "bold",
                          "textAlign": "right",
                        }
                      }
                    >
                      GD
                    </div>
                  </div>
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "borderBottomColor": "rgba(201,200,201,1.00)",
                      "borderBottomWidth": "1px",
                      "marginBottom": "10px",
                      "marginTop": "10px",
                      "width": "100%",
                    }
                  }
                />
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "end",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "flex-end",
                      "alignItems": "center",
                      "backgroundColor": "rgba(255,255,255,1.00)",
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexPack": "end",
                      "paddingBottom": "0px",
                      "paddingLeft": "0px",
                      "paddingRight": "0px",
                      "paddingTop": "0px",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "backgroundColor": "rgba(255,255,255,1.00)",
                        "borderBottomLeftRadius": "24px",
                        "borderBottomRightRadius": "24px",
                        "borderTopLeftRadius": "24px",
                        "borderTopRightRadius": "24px",
                        "height": "48px",
                        "width": "48px",
                      }
                    }
                  >
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitFlexBasis": "auto",
                          "borderBottomLeftRadius": "24px",
                          "borderBottomRightRadius": "24px",
                          "borderTopLeftRadius": "24px",
                          "borderTopRightRadius": "24px",
                          "flexBasis": "auto",
                          "height": "48px",
                          "msFlexPreferredSize": "auto",
                          "overflowX": "hidden",
                          "overflowY": "hidden",
                          "width": "48px",
                          "zIndex": 0,
                        }
                      }
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "backgroundColor": "rgba(0,0,0,0.00)",
                            "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                            "backgroundPosition": "center",
                            "backgroundRepeat": "no-repeat",
                            "backgroundSize": "cover",
                            "bottom": "0px",
                            "height": "100%",
                            "left": "0px",
                            "position": "absolute",
                            "right": "0px",
                            "top": "0px",
                            "width": "100%",
                            "zIndex": -1,
                          }
                        }
                      />
                      <img
                        alt=""
                        className="css-accessibilityImage-9pa8cd"
                        draggable={false}
                        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
                      />
                    </div>
                  </div>
                  <div
                    className="css-text-76zvg2"
                    dir="auto"
                    style={
                      Object {
                        "marginLeft": "auto",
                      }
                    }
                  >
                    <span
                      className="css-text-76zvg2 css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "display": "inlineBlock",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "10px",
                        }
                      }
                    >
                      From:
                    </span>
                    <span
                      className="css-text-76zvg2 css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "display": "inlineBlock",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "14px",
                        }
                      }
                    >
                      Misao Matimbo
                    </span>
                  </div>
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "borderBottomColor": "rgba(201,200,201,1.00)",
                      "borderBottomWidth": "1px",
                      "marginBottom": "10px",
                      "marginTop": "10px",
                      "width": "100%",
                    }
                  }
                />
                <div
                  className="css-text-76zvg2"
                  dir="auto"
                >
                  aaa
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "justify",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "space-between",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "msFlexDirection": "row",
                      "msFlexPack": "justify",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitBoxPack": "center",
                        "WebkitJustifyContent": "center",
                        "backgroundColor": "rgba(204,204,204,1.00)",
                        "borderBottomColor": "rgba(0,0,0,0.00)",
                        "borderBottomLeftRadius": "4px",
                        "borderBottomRightRadius": "4px",
                        "borderBottomStyle": "solid",
                        "borderBottomWidth": "0px",
                        "borderLeftColor": "rgba(0,0,0,0.00)",
                        "borderLeftStyle": "solid",
                        "borderLeftWidth": "0px",
                        "borderRightColor": "rgba(0,0,0,0.00)",
                        "borderRightStyle": "solid",
                        "borderRightWidth": "0px",
                        "borderTopColor": "rgba(0,0,0,0.00)",
                        "borderTopLeftRadius": "4px",
                        "borderTopRightRadius": "4px",
                        "borderTopStyle": "solid",
                        "borderTopWidth": "0px",
                        "boxShadow": "0px 0px 0px rgba(0,0,0,0.24)",
                        "justifyContent": "center",
                        "marginLeft": "auto",
                        "minWidth": "64px",
                        "msFlexPack": "center",
                      }
                    }
                  >
                    <div
                      className="css-cursor-18t94o4 css-view-1dbjc4n"
                      data-focusable={true}
                      disabled={false}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      role="button"
                      style={
                        Object {
                          "borderBottomLeftRadius": "4px",
                          "borderBottomRightRadius": "4px",
                          "borderTopLeftRadius": "4px",
                          "borderTopRightRadius": "4px",
                          "cursor": "pointer",
                          "msTouchAction": "manipulation",
                          "overflowX": "hidden",
                          "overflowY": "hidden",
                          "position": "relative",
                          "touchAction": "manipulation",
                        }
                      }
                      tabIndex="0"
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "WebkitAlignItems": "center",
                            "WebkitBoxAlign": "center",
                            "WebkitBoxDirection": "normal",
                            "WebkitBoxOrient": "horizontal",
                            "WebkitBoxPack": "center",
                            "WebkitFlexDirection": "row",
                            "WebkitJustifyContent": "center",
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                            "msFlexAlign": "center",
                            "msFlexDirection": "row",
                            "msFlexPack": "center",
                          }
                        }
                      >
                        <div
                          className="css-text-76zvg2 css-textOneLine-bfa6kz"
                          dir="auto"
                          style={
                            Object {
                              "color": "rgba(85,85,85,1.00)",
                              "direction": "ltr",
                              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                              "letterSpacing": "1px",
                              "marginBottom": "9px",
                              "marginLeft": "16px",
                              "marginRight": "16px",
                              "marginTop": "9px",
                              "textAlign": "center",
                            }
                          }
                        >
                          <span
                            className="css-text-76zvg2 css-textHasAncestor-16my406"
                            dir="auto"
                            style={
                              Object {
                                "direction": "ltr",
                                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                "fontSize": "18px",
                                "fontWeight": "bold",
                                "paddingBottom": "5px",
                                "paddingLeft": "5px",
                                "paddingRight": "5px",
                                "paddingTop": "5px",
                                "textAlign": "center",
                                "textTransform": "uppercase",
                              }
                            }
                          >
                            OK
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(200,199,204,1.00)",
                "height": "1px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "scrollSnapAlign": "start",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "flexDirection": "row",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignSelf": "flex-start",
                "WebkitBoxFlex": 1,
                "WebkitFlexBasis": "0%",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignSelf": "flex-start",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "height": "90vh",
                "marginRight": "10px",
                "msFlexItemAlign": "start",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
                "width": "95vw",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": "100%",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "backgroundColor": "rgba(255,255,255,1.00)",
                    "borderBottomColor": "rgba(201,200,201,1.00)",
                    "borderBottomLeftRadius": "4px",
                    "borderBottomRightRadius": "4px",
                    "borderBottomWidth": "2px",
                    "borderLeftColor": "rgba(201,200,201,1.00)",
                    "borderLeftWidth": "10px",
                    "borderRightColor": "rgba(201,200,201,1.00)",
                    "borderRightWidth": "2px",
                    "borderTopColor": "rgba(201,200,201,1.00)",
                    "borderTopLeftRadius": "4px",
                    "borderTopRightRadius": "4px",
                    "borderTopWidth": "2px",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                    "paddingBottom": "30px",
                    "paddingLeft": "30px",
                    "paddingRight": "30px",
                    "paddingTop": "30px",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "end",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "flex-end",
                      "alignItems": "center",
                      "backgroundColor": "rgba(255,255,255,1.00)",
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexPack": "end",
                      "paddingBottom": "0px",
                      "paddingLeft": "0px",
                      "paddingRight": "0px",
                      "paddingTop": "0px",
                    }
                  }
                >
                  <div
                    className="css-text-76zvg2"
                    dir="auto"
                    style={
                      Object {
                        "WebkitBoxFlex": 1,
                        "WebkitFlexBasis": "0%",
                        "WebkitFlexGrow": 1,
                        "WebkitFlexShrink": 1,
                        "color": "rgba(0,0,0,1.00)",
                        "flexBasis": "0%",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "fontFamily": "Helvetica, \\"sans-serif\\"",
                        "fontSize": "16px",
                        "fontWeight": "bold",
                        "msFlexNegative": 1,
                        "msFlexPositive": 1,
                        "msFlexPreferredSize": "0%",
                      }
                    }
                  >
                    Sent GD
                  </div>
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "16px",
                          "fontWeight": "bold",
                          "textAlign": "right",
                        }
                      }
                    >
                      0.04
                    </div>
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "direction": "ltr",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "16px",
                          "fontWeight": "bold",
                          "textAlign": "right",
                        }
                      }
                    >
                      GD
                    </div>
                  </div>
                </div>
                <div
                  className="css-text-76zvg2"
                  dir="auto"
                >
                  4/1/2019
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "borderBottomColor": "rgba(201,200,201,1.00)",
                      "borderBottomWidth": "1px",
                      "marginBottom": "10px",
                      "marginTop": "10px",
                      "width": "100%",
                    }
                  }
                />
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "end",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "flex-end",
                      "alignItems": "center",
                      "backgroundColor": "rgba(255,255,255,1.00)",
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexPack": "end",
                      "paddingBottom": "0px",
                      "paddingLeft": "0px",
                      "paddingRight": "0px",
                      "paddingTop": "0px",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "backgroundColor": "rgba(255,255,255,1.00)",
                        "borderBottomLeftRadius": "24px",
                        "borderBottomRightRadius": "24px",
                        "borderTopLeftRadius": "24px",
                        "borderTopRightRadius": "24px",
                        "height": "48px",
                        "width": "48px",
                      }
                    }
                  >
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitFlexBasis": "auto",
                          "borderBottomLeftRadius": "24px",
                          "borderBottomRightRadius": "24px",
                          "borderTopLeftRadius": "24px",
                          "borderTopRightRadius": "24px",
                          "flexBasis": "auto",
                          "height": "48px",
                          "msFlexPreferredSize": "auto",
                          "overflowX": "hidden",
                          "overflowY": "hidden",
                          "width": "48px",
                          "zIndex": 0,
                        }
                      }
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "backgroundColor": "rgba(0,0,0,0.00)",
                            "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                            "backgroundPosition": "center",
                            "backgroundRepeat": "no-repeat",
                            "backgroundSize": "cover",
                            "bottom": "0px",
                            "height": "100%",
                            "left": "0px",
                            "position": "absolute",
                            "right": "0px",
                            "top": "0px",
                            "width": "100%",
                            "zIndex": -1,
                          }
                        }
                      />
                      <img
                        alt=""
                        className="css-accessibilityImage-9pa8cd"
                        draggable={false}
                        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
                      />
                    </div>
                  </div>
                  <div
                    className="css-text-76zvg2"
                    dir="auto"
                    style={
                      Object {
                        "marginLeft": "auto",
                      }
                    }
                  >
                    <span
                      className="css-text-76zvg2 css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "display": "inlineBlock",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "10px",
                        }
                      }
                    >
                      To:
                    </span>
                    <span
                      className="css-text-76zvg2 css-textHasAncestor-16my406"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(0,0,0,1.00)",
                          "display": "inlineBlock",
                          "fontFamily": "Helvetica, \\"sans-serif\\"",
                          "fontSize": "14px",
                        }
                      }
                    >
                      Misao Matimbo
                    </span>
                  </div>
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "borderBottomColor": "rgba(201,200,201,1.00)",
                      "borderBottomWidth": "1px",
                      "marginBottom": "10px",
                      "marginTop": "10px",
                      "width": "100%",
                    }
                  }
                />
                <div
                  className="css-text-76zvg2"
                  dir="auto"
                >
                  aaa
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "justify",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "space-between",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "msFlexDirection": "row",
                      "msFlexPack": "justify",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitBoxPack": "center",
                        "WebkitJustifyContent": "center",
                        "backgroundColor": "rgba(204,204,204,1.00)",
                        "borderBottomColor": "rgba(0,0,0,0.00)",
                        "borderBottomLeftRadius": "4px",
                        "borderBottomRightRadius": "4px",
                        "borderBottomStyle": "solid",
                        "borderBottomWidth": "0px",
                        "borderLeftColor": "rgba(0,0,0,0.00)",
                        "borderLeftStyle": "solid",
                        "borderLeftWidth": "0px",
                        "borderRightColor": "rgba(0,0,0,0.00)",
                        "borderRightStyle": "solid",
                        "borderRightWidth": "0px",
                        "borderTopColor": "rgba(0,0,0,0.00)",
                        "borderTopLeftRadius": "4px",
                        "borderTopRightRadius": "4px",
                        "borderTopStyle": "solid",
                        "borderTopWidth": "0px",
                        "boxShadow": "0px 0px 0px rgba(0,0,0,0.24)",
                        "justifyContent": "center",
                        "marginLeft": "auto",
                        "minWidth": "64px",
                        "msFlexPack": "center",
                      }
                    }
                  >
                    <div
                      className="css-cursor-18t94o4 css-view-1dbjc4n"
                      data-focusable={true}
                      disabled={false}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      role="button"
                      style={
                        Object {
                          "borderBottomLeftRadius": "4px",
                          "borderBottomRightRadius": "4px",
                          "borderTopLeftRadius": "4px",
                          "borderTopRightRadius": "4px",
                          "cursor": "pointer",
                          "msTouchAction": "manipulation",
                          "overflowX": "hidden",
                          "overflowY": "hidden",
                          "position": "relative",
                          "touchAction": "manipulation",
                        }
                      }
                      tabIndex="0"
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "WebkitAlignItems": "center",
                            "WebkitBoxAlign": "center",
                            "WebkitBoxDirection": "normal",
                            "WebkitBoxOrient": "horizontal",
                            "WebkitBoxPack": "center",
                            "WebkitFlexDirection": "row",
                            "WebkitJustifyContent": "center",
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                            "msFlexAlign": "center",
                            "msFlexDirection": "row",
                            "msFlexPack": "center",
                          }
                        }
                      >
                        <div
                          className="css-text-76zvg2 css-textOneLine-bfa6kz"
                          dir="auto"
                          style={
                            Object {
                              "color": "rgba(85,85,85,1.00)",
                              "direction": "ltr",
                              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                              "letterSpacing": "1px",
                              "marginBottom": "9px",
                              "marginLeft": "16px",
                              "marginRight": "16px",
                              "marginTop": "9px",
                              "textAlign": "center",
                            }
                          }
                        >
                          <span
                            className="css-text-76zvg2 css-textHasAncestor-16my406"
                            dir="auto"
                            style={
                              Object {
                                "direction": "ltr",
                                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                "fontSize": "18px",
                                "fontWeight": "bold",
                                "paddingBottom": "5px",
                                "paddingLeft": "5px",
                                "paddingRight": "5px",
                                "paddingTop": "5px",
                                "textAlign": "center",
                                "textTransform": "uppercase",
                              }
                            }
                          >
                            OK
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeedList Vertical rendering With empty data matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitBoxPack": "center",
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "center",
      "backgroundColor": "rgba(239,239,244,1.00)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "center",
      "msFlexNegative": 1,
      "msFlexPack": "center",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-76zvg2"
    dir="auto"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Feed is empty.
  </div>
</div>
`;

exports[`FeedList Vertical rendering With feed data matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitBoxPack": "center",
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "center",
      "backgroundColor": "rgba(239,239,244,1.00)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "center",
      "msFlexNegative": 1,
      "msFlexPack": "center",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    onResponderGrant={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminationRequest={[Function]}
    onScroll={[Function]}
    onScrollShouldSetResponder={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitOverflowScrolling": "touch",
        "WebkitTransform": "translateZ(0px)",
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "column",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "overflowX": "hidden",
        "overflowY": "auto",
        "transform": "translateZ(0px)",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "maxWidth": "100vw",
          "width": "100%",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n"
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitTransform": "translateX(0px)",
                "transform": "translateX(0px)",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              data-focusable={true}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "MozUserSelect": "none",
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitBoxPack": "center",
                  "WebkitFlexDirection": "row",
                  "WebkitJustifyContent": "center",
                  "WebkitUserSelect": "none",
                  "alignItems": "center",
                  "backgroundColor": "rgba(238,238,239,1.00)",
                  "borderBottomColor": "rgba(0,0,0,0.10)",
                  "borderBottomWidth": "1px",
                  "cursor": "pointer",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": "5px",
                  "msFlexAlign": "center",
                  "msFlexDirection": "row",
                  "msFlexPack": "center",
                  "msTouchAction": "manipulation",
                  "msUserSelect": "none",
                  "paddingBottom": "15px",
                  "paddingLeft": "15px",
                  "paddingRight": "15px",
                  "paddingTop": "15px",
                  "touchAction": "manipulation",
                  "userSelect": "none",
                }
              }
              tabIndex="0"
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "center",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "center",
                      "alignItems": "center",
                      "backgroundColor": "rgba(238,238,239,1.00)",
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexPack": "center",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "backgroundColor": "rgba(255,255,255,1.00)",
                          "borderBottomLeftRadius": "24px",
                          "borderBottomRightRadius": "24px",
                          "borderTopLeftRadius": "24px",
                          "borderTopRightRadius": "24px",
                          "height": "48px",
                          "width": "48px",
                        }
                      }
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "WebkitFlexBasis": "auto",
                            "borderBottomLeftRadius": "24px",
                            "borderBottomRightRadius": "24px",
                            "borderTopLeftRadius": "24px",
                            "borderTopRightRadius": "24px",
                            "flexBasis": "auto",
                            "height": "48px",
                            "msFlexPreferredSize": "auto",
                            "overflowX": "hidden",
                            "overflowY": "hidden",
                            "width": "48px",
                            "zIndex": 0,
                          }
                        }
                      >
                        <div
                          className="css-view-1dbjc4n"
                          style={
                            Object {
                              "backgroundColor": "rgba(0,0,0,0.00)",
                              "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                              "backgroundPosition": "center",
                              "backgroundRepeat": "no-repeat",
                              "backgroundSize": "cover",
                              "bottom": "0px",
                              "height": "100%",
                              "left": "0px",
                              "position": "absolute",
                              "right": "0px",
                              "top": "0px",
                              "width": "100%",
                              "zIndex": -1,
                            }
                          }
                        />
                        <img
                          alt=""
                          className="css-accessibilityImage-9pa8cd"
                          draggable={false}
                          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
                        />
                      </div>
                    </div>
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                    >
                      

                    </div>
                  </div>
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitBoxFlex": 1,
                        "WebkitFlexBasis": "0%",
                        "WebkitFlexGrow": 1,
                        "WebkitFlexShrink": 1,
                        "flexBasis": "0%",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "msFlexNegative": 1,
                        "msFlexPositive": 1,
                        "msFlexPreferredSize": "0%",
                      }
                    }
                  >
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(75,75,75,1.00)",
                          "fontSize": "15px",
                          "textTransform": "capitalize",
                        }
                      }
                    >
                      From: Misao Matimbo
                    </div>
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(168,166,137,1.00)",
                          "fontSize": "13px",
                          "marginTop": "4px",
                          "opacity": 0.8,
                        }
                      }
                    >
                      aaa
                    </div>
                  </div>
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitAlignItems": "center",
                        "WebkitBoxAlign": "center",
                        "WebkitBoxDirection": "normal",
                        "WebkitBoxOrient": "horizontal",
                        "WebkitBoxPack": "center",
                        "WebkitFlexDirection": "row",
                        "WebkitJustifyContent": "center",
                        "alignItems": "center",
                        "backgroundColor": "rgba(238,238,239,1.00)",
                        "borderBottomColor": "rgba(0,0,0,0.10)",
                        "borderBottomWidth": "0px",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "marginBottom": "0px",
                        "msFlexAlign": "center",
                        "msFlexDirection": "row",
                        "msFlexPack": "center",
                        "paddingBottom": "0px",
                        "paddingLeft": "0px",
                        "paddingRight": "0px",
                        "paddingTop": "0px",
                      }
                    }
                  >
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <div
                        className="css-text-76zvg2"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(85,85,85,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                            "fontSize": "12px",
                            "textAlign": "right",
                          }
                        }
                      >
                        0.04
                      </div>
                      <div
                        className="css-text-76zvg2"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(85,85,85,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                            "fontSize": "12px",
                            "textAlign": "right",
                          }
                        }
                      >
                        GD
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexBasis": "0%",
                          "WebkitFlexGrow": 1,
                          "WebkitFlexShrink": 1,
                          "flexBasis": "0%",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "msFlexNegative": 1,
                          "msFlexPositive": 1,
                          "msFlexPreferredSize": "0%",
                        }
                      }
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "WebkitAlignItems": "center",
                            "WebkitBoxAlign": "center",
                            "WebkitBoxPack": "center",
                            "WebkitJustifyContent": "center",
                            "alignItems": "center",
                            "backgroundColor": "rgba(255,255,255,1.00)",
                            "borderBottomLeftRadius": "28px",
                            "borderBottomRightRadius": "28px",
                            "borderTopLeftRadius": "28px",
                            "borderTopRightRadius": "28px",
                            "height": "52px",
                            "justifyContent": "center",
                            "marginBottom": "7px",
                            "marginLeft": "7px",
                            "marginRight": "7px",
                            "marginTop": "7px",
                            "msFlexAlign": "center",
                            "msFlexPack": "center",
                            "width": "52px",
                          }
                        }
                      >
                        <div
                          className="css-text-76zvg2"
                          dir="auto"
                          style={
                            Object {
                              "backgroundColor": "rgba(0,0,0,0.00)",
                              "color": "rgba(85,85,85,1.00)",
                              "fontFamily": "MaterialIcons",
                              "fontSize": "24px",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                      <div
                        className="css-text-76zvg2"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(75,75,75,1.00)",
                            "fontSize": "8px",
                            "opacity": 0.8,
                          }
                        }
                      >
                        4/1/2019, 3:03:14 PM
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(200,199,204,1.00)",
              "height": "1px",
            }
          }
        />
      </div>
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n"
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitTransform": "translateX(0px)",
                "transform": "translateX(0px)",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              data-focusable={true}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "MozUserSelect": "none",
                  "WebkitAlignItems": "center",
                  "WebkitBoxAlign": "center",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitBoxPack": "center",
                  "WebkitFlexDirection": "row",
                  "WebkitJustifyContent": "center",
                  "WebkitUserSelect": "none",
                  "alignItems": "center",
                  "backgroundColor": "rgba(238,238,239,1.00)",
                  "borderBottomColor": "rgba(0,0,0,0.10)",
                  "borderBottomWidth": "1px",
                  "cursor": "pointer",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": "5px",
                  "msFlexAlign": "center",
                  "msFlexDirection": "row",
                  "msFlexPack": "center",
                  "msTouchAction": "manipulation",
                  "msUserSelect": "none",
                  "paddingBottom": "15px",
                  "paddingLeft": "15px",
                  "paddingRight": "15px",
                  "paddingTop": "15px",
                  "touchAction": "manipulation",
                  "userSelect": "none",
                }
              }
              tabIndex="0"
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitAlignItems": "center",
                      "WebkitBoxAlign": "center",
                      "WebkitBoxDirection": "normal",
                      "WebkitBoxOrient": "horizontal",
                      "WebkitBoxPack": "center",
                      "WebkitFlexDirection": "row",
                      "WebkitJustifyContent": "center",
                      "alignItems": "center",
                      "backgroundColor": "rgba(238,238,239,1.00)",
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "msFlexAlign": "center",
                      "msFlexDirection": "row",
                      "msFlexPack": "center",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "backgroundColor": "rgba(255,255,255,1.00)",
                          "borderBottomLeftRadius": "24px",
                          "borderBottomRightRadius": "24px",
                          "borderTopLeftRadius": "24px",
                          "borderTopRightRadius": "24px",
                          "height": "48px",
                          "width": "48px",
                        }
                      }
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "WebkitFlexBasis": "auto",
                            "borderBottomLeftRadius": "24px",
                            "borderBottomRightRadius": "24px",
                            "borderTopLeftRadius": "24px",
                            "borderTopRightRadius": "24px",
                            "flexBasis": "auto",
                            "height": "48px",
                            "msFlexPreferredSize": "auto",
                            "overflowX": "hidden",
                            "overflowY": "hidden",
                            "width": "48px",
                            "zIndex": 0,
                          }
                        }
                      >
                        <div
                          className="css-view-1dbjc4n"
                          style={
                            Object {
                              "backgroundColor": "rgba(0,0,0,0.00)",
                              "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                              "backgroundPosition": "center",
                              "backgroundRepeat": "no-repeat",
                              "backgroundSize": "cover",
                              "bottom": "0px",
                              "height": "100%",
                              "left": "0px",
                              "position": "absolute",
                              "right": "0px",
                              "top": "0px",
                              "width": "100%",
                              "zIndex": -1,
                            }
                          }
                        />
                        <img
                          alt=""
                          className="css-accessibilityImage-9pa8cd"
                          draggable={false}
                          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
                        />
                      </div>
                    </div>
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                    >
                      

                    </div>
                  </div>
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitBoxFlex": 1,
                        "WebkitFlexBasis": "0%",
                        "WebkitFlexGrow": 1,
                        "WebkitFlexShrink": 1,
                        "flexBasis": "0%",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "msFlexNegative": 1,
                        "msFlexPositive": 1,
                        "msFlexPreferredSize": "0%",
                      }
                    }
                  >
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(75,75,75,1.00)",
                          "fontSize": "15px",
                          "textTransform": "capitalize",
                        }
                      }
                    >
                      To: Misao Matimbo
                    </div>
                    <div
                      className="css-text-76zvg2"
                      dir="auto"
                      style={
                        Object {
                          "color": "rgba(168,166,137,1.00)",
                          "fontSize": "13px",
                          "marginTop": "4px",
                          "opacity": 0.8,
                        }
                      }
                    >
                      aaa
                    </div>
                  </div>
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "WebkitAlignItems": "center",
                        "WebkitBoxAlign": "center",
                        "WebkitBoxDirection": "normal",
                        "WebkitBoxOrient": "horizontal",
                        "WebkitBoxPack": "center",
                        "WebkitFlexDirection": "row",
                        "WebkitJustifyContent": "center",
                        "alignItems": "center",
                        "backgroundColor": "rgba(238,238,239,1.00)",
                        "borderBottomColor": "rgba(0,0,0,0.10)",
                        "borderBottomWidth": "0px",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "marginBottom": "0px",
                        "msFlexAlign": "center",
                        "msFlexDirection": "row",
                        "msFlexPack": "center",
                        "paddingBottom": "0px",
                        "paddingLeft": "0px",
                        "paddingRight": "0px",
                        "paddingTop": "0px",
                      }
                    }
                  >
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <div
                        className="css-text-76zvg2"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(85,85,85,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                            "fontSize": "12px",
                            "textAlign": "right",
                          }
                        }
                      >
                        0.04
                      </div>
                      <div
                        className="css-text-76zvg2"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(85,85,85,1.00)",
                            "direction": "ltr",
                            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                            "fontSize": "12px",
                            "textAlign": "right",
                          }
                        }
                      >
                        GD
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexBasis": "0%",
                          "WebkitFlexGrow": 1,
                          "WebkitFlexShrink": 1,
                          "flexBasis": "0%",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "msFlexNegative": 1,
                          "msFlexPositive": 1,
                          "msFlexPreferredSize": "0%",
                        }
                      }
                    >
                      <div
                        className="css-view-1dbjc4n"
                        style={
                          Object {
                            "WebkitAlignItems": "center",
                            "WebkitBoxAlign": "center",
                            "WebkitBoxPack": "center",
                            "WebkitJustifyContent": "center",
                            "alignItems": "center",
                            "backgroundColor": "rgba(255,255,255,1.00)",
                            "borderBottomLeftRadius": "28px",
                            "borderBottomRightRadius": "28px",
                            "borderTopLeftRadius": "28px",
                            "borderTopRightRadius": "28px",
                            "height": "52px",
                            "justifyContent": "center",
                            "marginBottom": "7px",
                            "marginLeft": "7px",
                            "marginRight": "7px",
                            "marginTop": "7px",
                            "msFlexAlign": "center",
                            "msFlexPack": "center",
                            "width": "52px",
                          }
                        }
                      >
                        <div
                          className="css-text-76zvg2"
                          dir="auto"
                          style={
                            Object {
                              "backgroundColor": "rgba(0,0,0,0.00)",
                              "color": "rgba(85,85,85,1.00)",
                              "fontFamily": "MaterialIcons",
                              "fontSize": "24px",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                      <div
                        className="css-text-76zvg2"
                        dir="auto"
                        style={
                          Object {
                            "color": "rgba(75,75,75,1.00)",
                            "fontSize": "8px",
                            "opacity": 0.8,
                          }
                        }
                      >
                        4/1/2019, 3:03:14 PM
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
